# datahub-local-workflows

./: .env.example  .gitignore  CLAUDE.md  README.md  datahub-local-workflows.code-workspace  pyproject.toml  renovate.json
.taskmaster/: config.json  state.json
dagster/: Dockerfile  README.md  pyproject.toml
dagster/datahub-local-dagster/: workspace.yaml
docs/: bodega_spec.md
n8n/: backup_n8n_workflows  backup_n8n_workflows.workflow.json  download_content  download_content.workflow.json  download_invoices_from_gmail.workflow.json  download_template.workflow.json  downloadcontent.json  linked_in_post_creator  linked_in_post_creator.workflow.json  linked_in_post_sharing  linked_in_post_sharing.workflow.json  linkedinpostsharing.json  test_form  (+8 more)
workflows/airflow/: COMPLETE_TEST_SUMMARY.md  README.md  TEST_DOCUMENTATION.md  pyproject.toml  requirements.txt  run_tests.py
workflows/airflow/dags/: __init__.py  bodega_dag.py  example_dag.py  example_db_dag.py  example_ingestion_dag.py  pi_dag.py  spark_py_dag.py  spark_sdp_tests_dag.py  sqlmesh_dag.py  sqlmesh_tests_dag.py
workflows/airflow/dags/tasks/: constants.py  dbt.py  dbt_utils.py  dlt.py  dlt_utils.py  sample.py  spark_utils.py  sqlmesh_launcher.py  sqlmesh_utils.py
workflows/airflow/dags/utils/: __init__.py  dbt.py  dlt.py  k8s.py  n8n.py
workflows/airflow/tests/: test_bodega_dag.py  test_example_db_dag.py  test_example_ingestion_dag.py  test_pi_dag.py  test_spark_py_dag.py  test_sqlmesh_launcher_dag.py
workflows/airflow/tests/tasks/: test_dbt.py  test_dbt_utils.py  test_dlt.py  test_dlt_utils.py  test_sample.py  test_sample_tasks.py  test_spark_utils.py  test_sqlmesh_launcher.py  test_sqlmesh_utils.py
workflows/airflow/tests/utils/: test_dbt.py  test_dlt.py
workflows/dbt/: Dockerfile  README.md  pyproject.toml
workflows/dbt/dbt_runner/: __main__.py
workflows/dbt/example_db/: dbt_project.yml  profiles.yml
workflows/dbt/example_db/models/gold/: automotive_fuel_body_mpg_summary.sql
workflows/dbt/example_db/models/silver/: automotive_raw.sql
workflows/dbt/pi/: dbt_project.yml  profiles.yml
workflows/dbt/pi/macros/: generate_samples.sql
workflows/dbt/projects/bodega/: dbt_project.yml  profiles.yml
workflows/dbt/projects/bodega/macros/: cross_engine.sql  generate_schema_name.sql
workflows/dbt/projects/bodega/models/: schema.yml  sources.yml
workflows/dbt/projects/bodega/models/gold/: category_spending.sql  price_trends.sql  spending_by_day.sql  spending_by_week.sql  tax_summary.sql  top_products.sql
workflows/dbt/projects/bodega/models/silver/: invoice_items.sql  invoice_taxes.sql  invoices.sql  stores.sql
workflows/dbt/projects/example_db/: dbt_project.yml  profiles.yml
workflows/dbt/projects/example_db/macros/: generate_schema_name.sql
workflows/dbt/projects/example_db/models/: schema.yml  sources.yml
workflows/dbt/projects/example_db/models/bronze/: automotive_snapshot.sql
workflows/dbt/projects/example_db/models/gold/: automotive_make_price_summary.sql
workflows/dbt/projects/pi/: dbt_project.yml  profiles.yml
workflows/dbt/projects/pi/models/: pi_estimate.sql  pi_samples.sql  schema.yml
workflows/dbt/src/dbt_runner/: __main__.py
workflows/dbt/tests/: conftest.py
workflows/dbt/tests/bodega/: test_integration.py  test_models.py  test_project.py
workflows/dbt/tests/example_db/: test_integration.py  test_models.py  test_projects.py
workflows/dbt/tests/pi/: test_project.py
workflows/dlt/: Dockerfile  README.md  pyproject.toml
workflows/dlt/dlt_runner/: __main__.py  config.py
workflows/dlt/example_db/: config.py  export.py  ingest.py
workflows/dlt/projects/bodega/: categories.csv  config.py  enrich.py  ingest.py
workflows/dlt/projects/example_db/: config.py  export.py  ingest.py
workflows/dlt/src/dlt_runner/: __main__.py  config.py  llm.py
workflows/dlt/tests/: conftest.py  test_config.py
workflows/dlt/tests/bodega/: test_enrich.py  test_ingest.py
workflows/dlt/tests/example_db/: test_integration.py
workflows/spark/: .dockerignore  Chart.yaml  Dockerfile.bundle  README.md  _helpers.tpl  helmfile.yaml.gotmpl  pyproject.toml  pyrightconfig.json  setup.py  values.yaml  values.yaml.gotmpl
workflows/spark/deploy/: README.md  helmfile.yaml.gotmpl  values.yaml.gotmpl
workflows/spark/scripts/: py.py  spark_py.py
workflows/spark/src/core/launchers/: __init__.py  spark_pipelines.py  spec_utils.py
workflows/spark/src/pipelines/common/: jdbc_table.sql.j2
workflows/spark/src/pipelines/example-db/: spark-pipeline.yml.j2
workflows/spark/src/pipelines/example-db/sql/: 10_automotive_source.sql.j2  20_automotive_raw.sql.j2  20_automotive_raw.sql.tpl  30_automotive_make_price_summary.sql.j2  30_automotive_make_price_summary.sql.tpl  40_automotive_fuel_body_mpg_summary.sql.j2  40_automotive_fuel_body_mpg_summary.sql.tpl
workflows/spark/src/pipelines/pi/: spark-pipeline.yml.j2
workflows/spark/src/pipelines/pi/sql/: 10_pi_samples.sql  20_pi_estimate.sql
workflows/spark/tests/: test_app.py  test_launchers.py
workflows/spark/tests/pipelines/: test_example_db_pipeline.py  test_spark_pipelines_launcher.py
workflows/spark/tools/: build_bundle.sh
workflows/sqlmesh/: Dockerfile  README.md  pyproject.toml
workflows/sqlmesh/pipelines/example_db/: .env.local  config.yaml
workflows/sqlmesh/pipelines/example_db/models/: jdbc.py
workflows/sqlmesh/pipelines/example_db/models/bronze/: automotive_snapshot.sql  automotive_source.py
workflows/sqlmesh/pipelines/example_db/models/gold/: automotive_fuel_body_mpg_summary.py  automotive_make_price_summary.py
workflows/sqlmesh/pipelines/example_db/models/marts/: automotive_fuel_body_mpg_summary.py  automotive_make_price_summary.py  automotive_raw.py
workflows/sqlmesh/pipelines/example_db/models/silver/: automotive_raw.py
workflows/sqlmesh/pipelines/pi/: config.yaml
workflows/sqlmesh/pipelines/pi/models/: pi_estimate.sql  pi_samples.sql
workflows/sqlmesh/tests/example_db/: conftest.py  test_config.py  test_integration.py  test_jdbc.py  test_models.py
workflows/sqlmesh/tests/pi/: test_config.py
(+98 files in other folders)
