[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datahub-local-dagster"
version = "0.1.0"
description = ""
authors = [{ name = "Alvaro Santos Andres", email = "alvsanand@gmail.com" }]
requires-python = ">=3.13,<3.14"
readme = "README.md"
license = "Apache-2.0"
license-files = [ "../LICENSE.txt" ]
dependencies = [
    "dagster>=1.7.9,<2",
    "dagster-aws>=0.27.8,<0.28",
    "dagster-celery-k8s>=0.27.8,<0.28",
    "dagster-celery>=0.27.8,<0.28",
    "dagster-dbt>=0.27.8,<0.28",
    "dagster-embedded-elt>=0.27.8,<0.28",
    "dagster-graphql>=1.7.9,<2",
    "dagster-k8s>=0.27.8,<0.28",
    "dagster-postgres>=0.27.8,<0.28",
    "dagster-pyspark>=0.27.8,<0.28",
    "dagster-spark>=0.27.8,<0.28",
    "dagster-ssh>=0.27.8,<0.28",
]

[dependency-groups]
dev = ["dagster-webserver>=1.7.9,<2"]

[tool.hatch.build.targets.wheel]
packages = ["datahub-local-dagster"]