[project]
name = "datahub-local-workflow-airflow"
version = "0.1.0"
description = "Airflow project skeleton for datahub-local-workflows"
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
  "apache-airflow==3.2.1",
  "apache-airflow-providers-postgres",
  "apache-airflow-providers-http",
  "apache-airflow-providers-amazon",
  "kubernetes>=30.0.0",
  "pytest",
]

[tool.uv]
# Optional uv settings for this project can be added here.

[tool.ruff]
# Ruff configuration for linting

[tool.ruff.lint]
# Ignore E402 (Module level import not at top of file)
# This is necessary for Airflow DAGs that need to adjust sys.path first
ignore = ["E402"]
