[project]
name = "datahub-local-ai-airflow"
version = "0.1.0"
description = "Airflow project skeleton for datahub-local-ai"
readme = "README.md"
requires-python = ">=3.11,<3.14"



dependencies = [
  "apache-airflow==3.3.0",
  "apache-airflow-providers-postgres",
  "apache-airflow-providers-http",
  "requests>=2.32",
  "apache-airflow-providers-amazon",
  "apache-airflow-providers-cncf-kubernetes>=10.0.0",
  "kubernetes>=30.0.0",
  "pytest",
]

[tool.uv]
# Optional uv settings for this project can be added here.

[tool.pytest.ini_options]
pythonpath = ["dags"]

[tool.ruff]
# Ruff configuration for linting

[tool.ruff.lint]
# Ignore E402 (Module level import not at top of file)
# This is necessary for Airflow DAGs that need to adjust sys.path first
ignore = ["E402"]
