[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "datahub-local-workflows-dbt"
version = "0.1.0"
description = "dbt Core pipelines for datahub-local-workflows (Trino + DuckDB)"
requires-python = ">=3.13"

dependencies = [
  "dbt-core>=1.9,<2.0",
  "dbt-trino",
  "dbt-duckdb",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pyyaml>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
# Optional uv settings for this project can be added here.

[tool.ruff.lint]
ignore = ["E402"]
