[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "datahub-local-workflows-dlt"
version = "0.1.0"
description = "dlt ingest/export pipelines for datahub-local-workflows (Iceberg/Polaris + Postgres, DuckDB local)"
requires-python = ">=3.13"

dependencies = [
  "dlt[duckdb,postgres,filesystem,sql-database,parquet]>=1.6",
  "pyiceberg[s3fs]>=0.8",
  "trino[sqlalchemy]>=0.330",
  "duckdb-engine>=0.13",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "confluent-kafka>=2.5"]
bodega = [
  "confluent-kafka>=2.5",
]

[tool.setuptools.packages.find]
where = ["src", "projects"]

[tool.uv]
# Optional uv settings for this project can be added here.

[tool.ruff.lint]
ignore = ["E402"]
