[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

[project]
name = "datahub_local_workflows"
version = "0.1.0"
description = "Spark declarative pipeline project for the datahub-local-workflows repository"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dynamic = ["dependencies"]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]

[tool.uv]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
