[project]
name = "datahub_local_workflows"
version = "0.1.0"
description = "Spark declarative pipeline project for the datahub-local-workflows repository"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "jinja2"
]

[dependency-groups]
dev = [
  "pyspark[pipelines]>=4.1,<4.2",
  "pytest",
  "ruff",
]

[tool.uv]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
