[project]
name = "datahub_local_workflows"
version = "0.1.0"
description = "Spark declarative pipeline project for the datahub-local-workflows repository"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "googleapis-common-protos>=1.71,<2.0",
  "grpcio>=1.76,<2.0",
  "grpcio-status>=1.76,<2.0",
  "jinja2>=3.1,<4.0",
  "numpy>=1.21,<3.0",
  "pandas>=2.2,<3.0",
  "pyarrow>=15.0,<22.0",
  "pyyaml>=6.0,<7.0",
  "zstandard>=0.25,<1.0",
]

[dependency-groups]
dev = [
  "pyspark[pipelines]>=4.1,<4.2",
  "pytest>=8.4,<9.0",
  "ruff>=0.12,<0.13",
]

[tool.uv]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
